Fix loading overlay z-index

--- a/src/components/loading.css
+++ b/src/components/loading.css
@@ -1,5 +1,5 @@
 .loading {
-	@apply transition-opacity duration-1000 ease-in-out;
+	@apply absolute inset-0 z-20 transition-opacity duration-1000 ease-in-out;
 }
 
 .loading.-loaded {
